[project]
name = "graphiti-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shyamsridhar123", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.12",
    "gradio>=5.34.0",
    "httpx>=0.28.1",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openai>=1.87.0",
    "pandas>=2.3.0",
    "pgvector>=0.4.1",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
graphiti-postgres = "graphiti_postgres:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
